[package]
name = "skyswitcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
blake2 = "0.9.2"
hex = "0.4.3"
log = "0.4.14"
loggerv = "0.7.2"
structopt = "0.3.25"
subprocess = "0.2.8"
